--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="logo.png"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#1A73E8"/><link rel="apple-touch-icon" sizes="76x76" href="apple-icon.png"/><link rel="manifest" href="/manifest.json"/><link rel="shortcut icon" href="logo.png" type="logo.png"/><title>APRAMEYA</title><meta property="og:title" content="APRAMEYA"/><meta property="og:description" content="REGISTER NOW"/><meta property="og:image" content="https://aprameya.tech/banner.jpg"/><meta property="og:image:width" content="1754"/><meta property="og:image:height" content="1240"/><script defer="defer" data-site="YOUR_DOMAIN_HERE" src="https://api.nepcha.com/js/nepcha-analytics.js"></script><script defer="defer" src="/static/js/main.03d88194.js"></script><link href="/static/css/main.376a8d9f.css" rel="stylesheet"></head><body><noscript>welcome to aprameya</noscript><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hello, World!</title>
+</head>
+
+<body>
+
+    <h1>Hello, World!</h1>
+
+</body>
+
+</html>
